--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,3 +59,48 @@ body {
     font-family: Lato, sans-serif;
 }
 
+.content-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 100px;
+  justify-content: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.content-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+.row-reverse {
+    flex-direction: row-reverse;
+}
+
+.image {
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 30%;
+}
+
+.text {
+    width: 30%;
+    padding: 20px;
+}
+
+.button {
+    background-color: #D8BC69;
+    padding: 10px 30px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.footer {
+    background-color: #D8BC69;
+}
+
+a:visited, a {
+  color: #000;
+}
