--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,11 +14,6 @@ body {
   padding: 10px 20px;
 }
 
-.item a {
-  text-decoration: none;
-  color: #333;
-}
-
 .item a:hover {
   color: #007bff;
 }
@@ -34,17 +29,11 @@ body {
   margin: 0 10px;
 }
 
-.nav-links a {
-  text-decoration: none;
-  color: #333;
-}
-
 .nav-links a:hover {
   color: #007bff;
 }
 
 .banner {
-    background-image: url("../images/photos/Image-6.jpg");
     height: 500px;
     background-size: cover;
     background-position: center;
@@ -60,19 +49,19 @@ body {
 }
 
 .content-container {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 100px;
-  justify-content: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 100px;
+    justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .content-row {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding-top: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 100px;
 }
 
 .row-reverse {
@@ -102,5 +91,18 @@ body {
 }
 
 a:visited, a {
-  color: #000;
+    text-decoration: none;
+    color: #000;
+}
+
+.about-content {
+    display: flex;
+    justify-content: center;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0;
 }
