--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,8 +2,6 @@ body {
   margin: 0px;
 }
 
-/* HOME */
-
 .navigation {
   display: flex;
   justify-content: space-around;
@@ -88,6 +86,7 @@ body {
 
 .footer {
     background-color: #D8BC69;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a:visited, a {
@@ -98,11 +97,50 @@ a:visited, a {
 .about-content {
     display: flex;
     justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .about-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 60%;
     padding: 50px 0;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+}
+
+.image-item {
+    background-image: url('../images/photos/Image-5.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 90%;
+    height: 200px;
+    margin-top: 20px;
+    border: gray solid 1px;
+}
+
+.employee-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+.employee-card {
+    padding: 20px;
+    border: #D8BC69 solid 4px;
+    border-radius: 5px;
+}
+
+.headshot {
+  width: 300px;
+}
+
+.social-icon {
+  padding-right: 10px;
 }
