--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,7 @@ body {
   padding: 0;
   margin: 0;
   display: flex;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .nav-links li {
@@ -143,4 +144,64 @@ a:visited, a {
 
 .social-icon {
   padding-right: 10px;
+}
+
+.contact-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    padding: 50px 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.information {
+    width: 15%;
+    padding-left: 10%;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    padding-left: 5%;
+}
+
+.table-left {
+  border-right: #D8BC69 solid 1px;
+}
+
+td {
+  padding: 5px;
+}
+
+#contact label {
+  font-weight: bold;
+}
+
+#contact input, #contact textarea {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  border: 1px solid #D8BC69;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background-color: lightgray;
+}
+
+#contact input[type="submit"] {
+  align-self: flex-end;
+  width: 200px;
+  margin-left: auto;
+  background-color: #D8BC69;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 30px;
+  cursor: pointer;
+}
+
+#contact {
+  display: flex;
+  flex-direction: column;
 }
