--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,10 +2,21 @@ body {
   margin: 0px;
 }
 
+h1, h2, h3 {
+  margin-top: 0;
+}
+
+/* NAVIGATION */
+
 .navigation {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.current-page {
+  border-bottom: 2px solid #D8BC69; 
+  margin-top: 0;
 }
 
 .item {
@@ -32,11 +43,19 @@ body {
   color: #007bff;
 }
 
+/* BANNER */
+
 .banner {
     height: 500px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 100%;
+    width: 100%;
 }
 
 .banner h1 {
@@ -46,6 +65,20 @@ body {
     font-size: 48px;
     font-family: Lato, sans-serif;
 }
+
+/* FOOTER */
+
+.footer {
+    background-color: #D8BC69;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+a:visited, a {
+    text-decoration: none;
+    color: #000;
+}
+
+/* HOME */
 
 .content-container {
     display: flex;
@@ -83,17 +116,10 @@ body {
     padding: 10px 30px;
     text-decoration: none;
     border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
 
-.footer {
-    background-color: #D8BC69;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-a:visited, a {
-    text-decoration: none;
-    color: #000;
-}
+/* ABOUT */
 
 .about-content {
     display: flex;
@@ -145,6 +171,8 @@ a:visited, a {
 .social-icon {
   padding-right: 10px;
 }
+
+/* CONTACT */
 
 .contact-container {
     display: flex;
@@ -199,9 +227,11 @@ td {
   border-radius: 5px;
   padding: 10px 30px;
   cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
 
 #contact {
   display: flex;
   flex-direction: column;
 }
+
