--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,6 +43,10 @@ h1, h2, h3 {
   color: #007bff;
 }
 
+.mobile-nav {
+  display: none;
+}
+
 /* BANNER */
 
 .banner {
@@ -235,7 +239,62 @@ td {
   flex-direction: column;
 }
 
+.menu-icon {
+  display: none;
+  width: 30px;
+  height: 30px;
+}
+
 @media (max-width: 800px) {
+  .menu-icon {
+    display: block;
+  }
+
+  .nav-links {
+    display: none;
+  }
+
+  .mobile-nav {
+    display: none;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #BF9D39;
+  }
+
+  .top-mobile {
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  .nav-links-mobile {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+  }
+
+  .bottom-mobile .item-mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+  }
+
+  .nav-links-mobile li {
+    padding: 10px 0;
+    font-size: 24px;
+    font-weight: bold;
+  }
+
   /* HOME ADJUSTMENTS */
   .content-container {
     flex-direction: column;
